// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<span>
  <button
    class="IconButton EditorToolbarButton IconButton--secondary"
    data-test-id="cf-ui-editor-toolbar-button"
    type="button"
  >
    <span
      class="TabFocusTrap IconButton__inner"
      tabindex="-1"
    >
      <svg
        class="Icon Icon--small Icon--primary IconButton__icon"
        data-test-id="cf-ui-icon"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M11.7 5v5.5H6.1V5H3.3v14h2.8v-6.1h5.6V19h2.8V5zM18.6 19v-6.3L17.1 14l-1-1.4 2.8-2.1h1.8V19h-2.1z"
        />
      </svg>
      <span
        class="IconButton__label"
      >
        H1
      </span>
    </span>
  </button>
</span>
`;

exports[`renders the component as active 1`] = `
<span>
  <button
    class="IconButton EditorToolbarButton EditorToolbarButton--is-active IconButton--secondary"
    data-test-id="cf-ui-editor-toolbar-button"
    type="button"
  >
    <span
      class="TabFocusTrap IconButton__inner"
      tabindex="-1"
    >
      <svg
        class="Icon Icon--small Icon--primary IconButton__icon"
        data-test-id="cf-ui-icon"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M11.7 5v5.5H6.1V5H3.3v14h2.8v-6.1h5.6V19h2.8V5zM18.6 19v-6.3L17.1 14l-1-1.4 2.8-2.1h1.8V19h-2.1z"
        />
      </svg>
      <span
        class="IconButton__label"
      >
        H1
      </span>
    </span>
  </button>
</span>
`;

exports[`renders the component as disabled 1`] = `
<span>
  <button
    class="IconButton EditorToolbarButton IconButton--disabled IconButton--secondary"
    data-test-id="cf-ui-editor-toolbar-button"
    disabled=""
    type="button"
  >
    <span
      class="TabFocusTrap IconButton__inner"
      tabindex="-1"
    >
      <svg
        class="Icon Icon--small Icon--primary IconButton__icon"
        data-test-id="cf-ui-icon"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M11.7 5v5.5H6.1V5H3.3v14h2.8v-6.1h5.6V19h2.8V5zM18.6 19v-6.3L17.1 14l-1-1.4 2.8-2.1h1.8V19h-2.1z"
        />
      </svg>
      <span
        class="IconButton__label"
      >
        H1
      </span>
    </span>
  </button>
</span>
`;

exports[`renders the component with a tooltip 1`] = `
<span>
  <button
    class="IconButton EditorToolbarButton IconButton--secondary"
    data-test-id="cf-ui-editor-toolbar-button"
    type="button"
  >
    <span
      class="TabFocusTrap IconButton__inner"
      tabindex="-1"
    >
      <svg
        class="Icon Icon--small Icon--primary IconButton__icon"
        data-test-id="cf-ui-icon"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M11.7 5v5.5H6.1V5H3.3v14h2.8v-6.1h5.6V19h2.8V5zM18.6 19v-6.3L17.1 14l-1-1.4 2.8-2.1h1.8V19h-2.1z"
        />
      </svg>
      <span
        class="IconButton__label"
      >
        H1
      </span>
    </span>
  </button>
</span>
`;

exports[`renders the component with an additional class name 1`] = `
<span>
  <button
    class="IconButton EditorToolbarButton my-extra-class IconButton--secondary"
    data-test-id="cf-ui-editor-toolbar-button"
    type="button"
  >
    <span
      class="TabFocusTrap IconButton__inner"
      tabindex="-1"
    >
      <svg
        class="Icon Icon--small Icon--primary IconButton__icon"
        data-test-id="cf-ui-icon"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M11.7 5v5.5H6.1V5H3.3v14h2.8v-6.1h5.6V19h2.8V5zM18.6 19v-6.3L17.1 14l-1-1.4 2.8-2.1h1.8V19h-2.1z"
        />
      </svg>
      <span
        class="IconButton__label"
      >
        H1
      </span>
    </span>
  </button>
</span>
`;

exports[`renders with a dropdown indicator 1`] = `
<span>
  <button
    class="IconButton EditorToolbarButton IconButton--secondary"
    data-test-id="cf-ui-editor-toolbar-button"
    type="button"
  >
    <span
      class="TabFocusTrap IconButton__inner"
      tabindex="-1"
    >
      <svg
        class="Icon Icon--small Icon--primary IconButton__icon"
        data-test-id="cf-ui-icon"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M11.7 5v5.5H6.1V5H3.3v14h2.8v-6.1h5.6V19h2.8V5zM18.6 19v-6.3L17.1 14l-1-1.4 2.8-2.1h1.8V19h-2.1z"
        />
      </svg>
      <span
        class="IconButton__label"
      >
        H1
      </span>
      <svg
        class="Icon Icon--small Icon--secondary IconButton__dropdown"
        data-test-id="cf-ui-icon"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
        />
        <path
          d="M0-.75h24v24H0z"
          fill="none"
        />
      </svg>
    </span>
  </button>
</span>
`;
